--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12
 altair==4.2.0
+appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 arrow==1.2.2
@@ -32,10 +33,10 @@ decorator==5.1.1
 defusedxml==0.7.1
 diff-match-patch==20200713
 dill==0.3.4
+distlib==0.3.1
 docutils==0.17.1
 entrypoints==0.4
 executing==0.8.3
-fastjsonschema==2.15.3
 flake8==4.0.1
 gitdb==4.0.9
 GitPython==3.1.27
@@ -45,7 +46,7 @@ importlib-metadata==4.11.3
 importlib-resources==5.6.0
 inflection==0.5.1
 intervaltree==3.1.0
-ipykernel==6.12.1
+ipykernel==6.11.0
 ipython==7.32.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
@@ -68,13 +69,13 @@ mistune==0.8.4
 mypy-extensions==0.4.3
 nbclient==0.5.13
 nbconvert==6.4.5
-nbformat==5.3.0
-nest-asyncio==1.5.5
+nbformat==5.2.0
+nest-asyncio==1.5.4
 notebook==6.4.10
 numpy==1.22.3
 numpydoc==1.2.1
 packaging==21.3
-pandas==1.4.2
+pandas==1.4.1
 pandocfilters==1.5.0
 paramiko==2.10.3
 parso==0.8.3
@@ -82,12 +83,13 @@ pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.0
+pipenv==2020.11.15
 platformdirs==2.5.1
-plotly==5.7.0
+plotly==5.6.0
 pluggy==1.0.0
 poyo==0.5.0
-prometheus-client==0.14.0
-prompt-toolkit==3.0.29
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
 protobuf==3.20.0
 psutil==5.9.0
 ptyprocess==0.7.0
@@ -99,7 +101,7 @@ pydeck==0.7.1
 pydocstyle==6.1.1
 pyflakes==2.4.0
 Pygments==2.11.2
-pylint==2.13.5
+pylint==2.13.4
 pyls-spyder==0.4.0
 Pympler==1.0.1
 PyNaCl==1.5.0
@@ -117,9 +119,9 @@ python-lsp-server==1.4.1
 python-slugify==6.1.1
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==303
-pywin32-ctypes==0.2.0
-pywinpty==2.0.5
+#pywin32==303
+#pywin32-ctypes==0.2.0
+#pywinpty==2.0.5
 pyzmq==22.3.0
 QDarkStyle==3.0.3
 qstylizer==0.2.1
@@ -128,14 +130,14 @@ qtconsole==5.3.0
 QtPy==2.0.1
 requests==2.27.1
 rope==0.23.0
-Rtree==1.0.0
+Rtree==0.9.7
 semver==2.13.0
 Send2Trash==1.8.0
 six==1.16.0
 smmap==5.0.0
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
-soupsieve==2.3.2
+soupsieve==2.3.1
 Sphinx==4.5.0
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
@@ -161,15 +163,16 @@ tornado==6.1
 traitlets==5.1.1
 typing_extensions==4.1.1
 tzdata==2022.1
-tzlocal==4.2
-ujson==5.2.0
+tzlocal==4.1
+ujson==5.1.0
 urllib3==1.26.9
 validators==0.18.2
+virtualenv==20.2.1
+virtualenv-clone==0.5.4
 watchdog==2.1.7
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
-wincertstore==0.2
 wrapt==1.14.0
 yapf==0.32.0
-zipp==3.8.0
+zipp==3.7.0
